--- a/src/app.scss
+++ b/src/app.scss
@@ -1,36 +1,52 @@
-$primary-color: #108db8;
-$sans-serif-font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial,
-  'Lucida Grande', sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Muli|Merriweather");
+@import url("~normalize.css/normalize.css");
+
+// Vertical Rhythm
+$base-font-size: 18px;
+$base-line-height: 28px;
+
+// Typefaces
+$font-family: 'Muli', serif;
+$heading-font-family: 'Merriweather', sans-serif;
+
+// Text Colors
+$text-color: #000;
+$heading-color: #000;
+
+// Colors
+$orange: #DE7719;
+$blue: complement($orange);
+$red: adjust-hue($orange, -30deg);
+$teal: adjust-hue($orange, -270deg);
+$purple: adjust-hue($orange, -60deg);
+
+//$orange: #E0523C; // alternative red
+$light-blue: #E7F3FF;
 
 body {
-  font-family: $sans-serif-font;
-  font-weight: 300;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-}
+  font-family: $font-family;
+  color: $text-color;
+  background: #F7F7F7 url('/assets/images/80-70-3.png');
+  border-top: 8px solid $orange;
+  font-size: $base-font-size;
+  line-height: 1.4;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 
-a {
-  text-decoration: none;
-  color: $primary-color;
-  font-weight: bold;
-}
+  &:before {
+    content: "";
+    position: fixed;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
 
-img {
-  max-width: 100%;
-}
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.4);
 
-nav {
-  width: 100%;
-  background: $primary-color;
-
-  a {
-    color: white;
-    padding: 1rem;
-    display: inline-block;
+    z-index: 100;
   }
 }
 
-.content {
-  padding: 1rem;
+h1, h2, h3, h4, h5 {
+  font-family: $heading-font-family;
 }
