--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Muli|Merriweather");
+@import url("https://fonts.googleapis.com/css?family=Muli:300,400|Merriweather:300,400");
 @import "~normalize.css/normalize.css";
 
 // Vertical Rhythm
@@ -8,8 +8,8 @@ $base-line-height: 28px;
 $gutter: 1rem;
 
 // Typefaces
-$font-family: 'Muli', serif;
-$heading-font-family: 'Merriweather', sans-serif;
+$font-family: 'Muli', sans-serif;
+$heading-font-family: 'Merriweather', serif;
 
 // Text Colors
 $text-color: #000;
@@ -28,6 +28,7 @@ $light-blue: #E7F3FF;
 body {
   overscroll-behavior: none;
   font-family: $font-family;
+  font-weight: 300;
   color: $text-color;
   background: #F7F7F7 url('/assets/images/80-70-3.png');
   // border-top: 8px solid $orange;
@@ -52,28 +53,48 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: $heading-font-family;
+  font-weight: 400;
 }
 
 header {
   // border-bottom: 1px solid #ccc;
   // padding-bottom: 1rem;
-  margin-bottom: 1rem;
-  padding-top: 2rem;
+  padding-top: 2.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
 
+  .wrapper {
+    display: flex;
+  }
   h1 {
-    font-size: 30px;
-    line-height: 30px;
-    margin-right: 8rem;
-    margin-top: 0;
+    font-size: $base-font-size;
+    line-height: 40px;
+    margin: 0;
+    margin-right: 22rem;
+    font-weight: 400;
+    .icon {
+      display: block;
+      margin-right: 0.35rem;
+      width: 22px;
+      height: 22px;
+      transform: translateY(7px);
+      fill: $orange;
+    }
     a {
+      display: flex;
       text-decoration: none;
       color: $text-color;
+      &:hover {
+        color: $orange;
+      }
     }
     em {
-      display: block;
-      font-size: $base-font-size;
+      display: none;
+      font-size: 19px;
       font-style: normal;
-      font-family: $font-family;
+      // font-family: $font-family;
+      padding-top: 0.35rem;
+      opacity: 0.7;
     }
   }
 
@@ -82,17 +103,30 @@ header {
     flex-grow: 1;
     justify-content: space-between;
     a {
-      text-align: center;
+      display: block;
       text-decoration: none;
       color: #110e0b;
+      font-weight: bold;
+      padding: 0px 2px 0 2px;
+      line-height: 40px;
+      border-bottom: 2px solid transparent;
+
+      &:hover {
+        color: $orange;
+      }
+      &.active {
+        color: $orange;
+        border-color: $orange;
+      }
     }
     .icon {
-      display: block;
-      fill: #302d27;
+      display: none;
+      fill: #000000;
+      opacity: 0.75;
       width: 35px;
       height: 35px;
       text-align: center;
-      margin: 0 auto;
+      margin: 0 auto 0.25rem auto;
     }
     // .icon-work {
     //   fill: #000000;
@@ -114,8 +148,7 @@ div.content {
   // margin: 0 auto;
 
   .wrapper {
-    border-top: 1px solid #ccc;
-    padding-top: 2rem;
+
   }
 }
 
@@ -147,7 +180,79 @@ footer {
 }
 
 div.wrapper {
-  max-width: 900px;
+  max-width: 980px;
   margin: 0 auto;
+}
+
+ul.skills {
   display: flex;
+  flex-wrap: wrap;
+  margin: 5rem 0 2rem 0;
+  padding: 0;
+  li {
+    display: block;
+    margin: 0 0 1rem 0;
+    padding: 0;
+    flex: 0 0 33.33333%;
+    h3 {
+      margin: 0;
+    }
+    p {
+      margin: 0;
+    }
+    .icon {
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+
+section {
+  padding: 4rem 0;
+  &.orange {
+    background: lighten($orange, 5);
+  }
+  &.blue {
+    background: lighten($blue, 0);
+    color: #fff;
+  }
+
+  &.bytemark {
+    color: #fff;
+    background: #004ea4 url('/assets/images/80-70-2.png');
+  }
+}
+ul.projects {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2rem 0 0 0;
+  padding: 0;
+}
+
+div.work {
+  display: flex;
+
+  figure {
+    display: block;
+    flex: 0 0 66.66666%;
+    margin: 0;
+    padding: 0 2rem 0 0;
+    box-sizing: border-box;
+    img {
+      width: 100%;
+    }
+  }
+
+  aside {
+    flex: 0 0 33.333333%;
+    
+    h2 {
+      margin-top: 0;
+      font-weight: 300;
+    }
+
+    p {
+      font-weight: 300;
+    }
+  }
 }
