--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,36 @@
+@charset 'utf-8';
+
+
+
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400|Merriweather:300,400");
-@import "~normalize.css/normalize.css";
+// @import "~normalize.css/normalize.css";
+
+@import '~vertical-rhythm-reset/dist/vertical-rhythm-reset';
+
+$vr-font-size    : 18px;
+$vr-line-height  : 1.5;
+$vr-modular-scale: minor-third;
+
+$vr-breakpoints: (
+  10em: (
+    font-size: 16px
+  ),
+  60em: (
+    font-size: 18px
+  )
+);
+
+$vr-helpers      : false;
+
+// $vr-grid-color: rgba(233, 30, 99, 0.5);
+
+@include vr-reset();
 
 // Vertical Rhythm
 $base-font-size: 18px;
-$base-line-height: 28px;
+$base-line-height: 27px;
 
-$gutter: 1rem;
+$gutter: 2rem;
 
 // Typefaces
 $font-family: 'Muli', sans-serif;
@@ -26,29 +51,61 @@ $purple: adjust-hue($orange, -60deg);
 $light-blue: #E7F3FF;
 
 body {
-  overscroll-behavior: none;
   font-family: $font-family;
-  font-weight: 300;
-  color: $text-color;
   background: #F7F7F7 url('/assets/images/80-70-3.png');
-  // border-top: 8px solid $orange;
-  font-size: $base-font-size;
-  line-height: 1.4;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  overscroll-behavior: none;
 
-  &:before {
+  // @include vr-grid();
+}
+
+
+div.container {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh);
+
+  &:before, &:after {
+    display: block;
     content: "";
-    position: fixed;
-    top: -10px;
+    position: absolute;
+    top: 0px;
     left: 0;
     width: 100%;
-    height: 10px;
-
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.4);
-
+    height: 9px;
+  }
+  &:before {
+    background: $orange;
+  }
+  &:after {
+    top: -9px;
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.4);
     z-index: 100;
   }
+}
+
+section {
+  @include vr($padding-top: 2);
+  @include vr($padding-bottom: 2);
+  &.orange {
+    background: lighten($orange, 5);
+  }
+  &.blue {
+    background: lighten($blue, 0);
+    color: #fff;
+  }
+  &.bytemark {
+    color: #fff;
+    background: #004ea4 url('/assets/images/80-70-2.png');
+  }
+}
+
+.grid-wrapper {
+  max-width: 57rem;
+  margin: 0 auto;
+  @include vr(
+    $padding-left: 1,
+    $padding-right: 1
+  );
 }
 
 h1, h2, h3, h4, h5 {
@@ -57,44 +114,41 @@ h1, h2, h3, h4, h5 {
 }
 
 header {
-  // border-bottom: 1px solid #ccc;
-  // padding-bottom: 1rem;
-  padding-top: 2.5rem;
-  padding-bottom: 1rem;
+  @include vr(
+    $padding-top: 1,
+    $offset-bottom: 1
+  );
   border-bottom: 1px solid #ccc;
 
-  .wrapper {
+  .grid-wrapper {
     display: flex;
   }
   h1 {
-    font-size: $base-font-size;
-    line-height: 40px;
     margin: 0;
-    margin-right: 22rem;
     font-weight: 400;
     .icon {
-      display: block;
-      margin-right: 0.35rem;
-      width: 22px;
-      height: 22px;
-      transform: translateY(7px);
+      display: inline-flex;
+      align-self: center;
+      @include vr(
+        $height: 0.8,
+        $width: 0.8,
+        $offset-top: 2,
+        $margin-right: 0.2
+      );
       fill: $orange;
     }
     a {
+      @include vr(
+        $font-size: 0,
+        $height: 3,
+        $line-height: 3
+      );
       display: flex;
       text-decoration: none;
       color: $text-color;
       &:hover {
         color: $orange;
       }
-    }
-    em {
-      display: none;
-      font-size: 19px;
-      font-style: normal;
-      // font-family: $font-family;
-      padding-top: 0.35rem;
-      opacity: 0.7;
     }
   }
 
@@ -106,10 +160,11 @@ header {
       display: block;
       text-decoration: none;
       color: #110e0b;
-      font-weight: bold;
       padding: 0px 2px 0 2px;
-      line-height: 40px;
+      @include vr($height: 3);
+      @include vr($line-height: 3);
       border-bottom: 2px solid transparent;
+      @include vr($offset-bottom: 2px);
 
       &:hover {
         color: $orange;
@@ -136,21 +191,7 @@ header {
   }
 }
 
-div.container {
-  display: flex;
-  flex-direction: column;
-  min-height: calc(100vh - 8px);
-  border-top: 8px solid $orange;
-}
 
-div.content {
-  // max-width: 960px;
-  // margin: 0 auto;
-
-  .wrapper {
-
-  }
-}
 
 footer {
   transition: all 3s;
@@ -179,49 +220,36 @@ footer {
   }
 }
 
-div.wrapper {
-  max-width: 980px;
-  margin: 0 auto;
-}
 
 ul.skills {
   display: flex;
   flex-wrap: wrap;
-  margin: 5rem 0 2rem 0;
+
+  @include vr(
+    $margin: 2 0 0 0
+  );
   padding: 0;
   li {
     display: block;
-    margin: 0 0 1rem 0;
+    margin: 0;
     padding: 0;
     flex: 0 0 33.33333%;
-    h3 {
-      margin: 0;
+
+    h4 {
+      @include vr(
+        $margin-top: 0.75,
+        $margin-bottom: 0.25
+      );
     }
     p {
-      margin: 0;
-    }
-    .icon {
-      width: 50px;
-      height: 50px;
+      @include vr(
+        $margin-top: 0.25
+      );
     }
   }
 }
 
-section {
-  padding: 4rem 0;
-  &.orange {
-    background: lighten($orange, 5);
-  }
-  &.blue {
-    background: lighten($blue, 0);
-    color: #fff;
-  }
 
-  &.bytemark {
-    color: #fff;
-    background: #004ea4 url('/assets/images/80-70-2.png');
-  }
-}
 ul.projects {
   display: flex;
   flex-wrap: wrap;
@@ -238,7 +266,11 @@ div.work {
     margin: 0;
     padding: 0 2rem 0 0;
     box-sizing: border-box;
+
     img {
+      display: block;
+      box-shadow: 5px 5px 10px 0px rgba(#000, 0.1);
+      border-radius: 3px;
       width: 100%;
     }
   }
