--- a/src/app.scss
+++ b/src/app.scss
@@ -1,44 +1,20 @@
 @charset 'utf-8';
 
-
-
-@import url("https://fonts.googleapis.com/css?family=Muli:300,400|Merriweather:300,400");
-// @import "~normalize.css/normalize.css";
+@import "./styles/mixins.scss";
+@import "./styles/base.scss";
+@import "./styles/fonts.scss";
 
 @import '~vertical-rhythm-reset/dist/vertical-rhythm-reset';
 @import "~sass-easing/_easings";
 
-$vr-font-size    : 18px;
-$vr-line-height  : 1.5;
-$vr-modular-scale: minor-third;
-
-$vr-breakpoints: (
-  10em: (
-    font-size: 16px
-  ),
-  60em: (
-    font-size: 18px
-  )
-);
-
-$vr-helpers      : false;
-
-// $vr-grid-color: rgba(233, 30, 99, 0.5);
-
 @include vr-reset();
-
-// Vertical Rhythm
-$base-font-size: 18px;
-$base-line-height: 27px;
-
-$gutter: 2rem;
 
 // Typefaces
 $font-family: 'Muli', sans-serif;
 $heading-font-family: 'Merriweather', serif;
 
 // Text Colors
-$text-color: #222;
+$text-color: #333;
 $heading-color: #000;
 
 // Colors
@@ -52,6 +28,7 @@ $purple: adjust-hue($orange, -60deg);
 $light-blue: #E7F3FF;
 
 body {
+  min-width: 320px;
   font-family: $font-family;
   background: #F7F7F7 url('/assets/images/80-70-3.png');
   overscroll-behavior: none;
@@ -114,108 +91,8 @@ h1, h2, h3, h4, h5 {
   font-weight: 400;
 }
 
-header {
-  @include vr(
-    $padding-top: 1,
-    $offset-bottom: 1
-  );
-  border-bottom: 1px solid #ccc;
 
-  .grid-wrapper {
-    display: flex;
-    @include vr(
-      $padding-right: 0
-    );
-  }
-  h1 {
-    margin: 0;
-    font-weight: 400;
-    // flex: 0 0 50%;
-    .icon {
-      display: inline-flex;
-      align-self: center;
-      @include vr(
-        $height: 0.8,
-        $width: 0.8,
-        $offset-top: 2,
-        $margin-right: 0.2
-      );
-      fill: $orange;
-    }
-    a {
-      @include vr(
-        $font-size: 0,
-        $height: 3,
-        $line-height: 3
-      );
-      display: flex;
-      text-decoration: none;
-      max-width: 12rem;
-      color: $text-color;
-      &:hover {
-        color: $orange;
-      }
-    }
-  }
-
-  nav {
-    display: flex;
-    // flex-grow: 1;
-    margin-left: auto;
-    justify-content: space-between;
-    a {
-      display: flex;
-      text-decoration: none;
-      color: #110e0b;
-      // flex: 1 1 auto;
-      @include vr(
-        $padding-left: 1.1,
-        $padding-right: 1.1,
-        $padding-top: 0.75,
-        $padding-bottom: 0.75
-      );
-      text-align: center;
-    
-      span {
-        display: block;
-        border-bottom: 2px solid transparent;
-        @include vr(
-          $height: 1.5,
-          $line-height: 1.5,
-          $padding-left: 0.15,
-          $padding-right: 0.15,
-          $offset-bottom: 2px
-        );
-      }
-
-      &:hover {
-        color: $orange;
-      }
-      &.active {
-        color: $orange;
-        span {
-          border-color: $orange;
-        }
-      }
-    }
-    .icon {
-      display: none;
-      fill: #000000;
-      opacity: 0.75;
-      width: 35px;
-      height: 35px;
-      text-align: center;
-      margin: 0 auto 0.25rem auto;
-    }
-    // .icon-work {
-    //   fill: #000000;
-    //   width: 50px;
-    //   height: 50px;
-    // }
-  }
-}
-
-
+@import "./styles/header.scss";
 
 footer {
   transition: all 3s;
@@ -251,6 +128,7 @@ section.skills {
     @include vr(
       $margin-right: 1
     );
+    line-height: 1.5em !important;
   }
   .grid-wrapper {
     @include vr(
@@ -307,6 +185,8 @@ div.work {
     box-sizing: border-box;
 
     img {
+      -webkit-transform-style: preserve-3d;
+      -webkit-backface-visibility: hidden;
       display: block;
       box-shadow: 5px 5px 5px 0px rgba(#000, 0.2);
       border-radius: 3px;
@@ -323,6 +203,9 @@ div.work {
     h2 {
       margin-top: 0;
       font-weight: 300;
+      @include vr(
+        $line-height: 1.5
+      );
     }
     p {
       font-weight: 300;
@@ -399,4 +282,32 @@ div.work {
     }
   }
 
+}
+
+.about {
+  display: flex;
+
+  figure {
+    display: block;
+    flex: 0 0 33.333333333%;
+    margin: 0;
+    padding: 0;
+    @include vr(
+      $padding-right: 0.6
+    );
+    overflow: hidden;
+    box-sizing: border-box;
+
+    img {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  aside {
+    flex: 0 0 66.6666666666%;
+    @include vr(
+      $padding-left: 0.5
+    );
+  }
 }
