:zap: Add browser window chrome to work screenshots

--- a/src/app.scss
+++ b/src/app.scss
@@ -115,6 +115,7 @@ h1, h2, h3, h4, h5 {
 @import "./styles/header.scss";
 @import "./styles/resume.scss";
 @import "./styles/work.scss";
+@import "./styles/window.scss";
 
 footer {
   // flex-shrink: 0;
