--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -13,15 +13,6 @@
     overflow: hidden;
     box-sizing: border-box;
 
-    img {
-      -webkit-transform-style: preserve-3d;
-      -webkit-backface-visibility: hidden;
-      display: block;
-      box-shadow: 5px 5px 5px 0px rgba(#000, 0.2);
-      // border-radius: 3px;
-      width: 100%;
-    }
-
     .fluid-iframe {
       @include fluid-aspect(199 163, iframe);
 
@@ -65,6 +56,7 @@
   @include width-below($phablet) {
     display: block;
     &__figure {
+      padding-right: 0;
       @include vr(
         $padding-bottom: 1
       );
