:zap: Add formstyles project

--- a/src/app.scss
+++ b/src/app.scss
@@ -81,11 +81,19 @@ section {
   }
   &.black {
     color: rgba(#fff, 0.95);
-    background: #343434 url('/assets/images/80-70-4.png');
+    background: #363636 url('/assets/images/80-70-3.png');
     border-top: 1px solid rgba(#000, 0.05);
     @include vr(
       $offset-top: 1px
     );
+  }
+  &.green {
+    color: rgba(#fff, 0.95);
+    background: darken(#20BA73, 5) url('/assets/images/80-70-3.png');
+    // border-top: 1px solid rgba(#000, 0.05);
+    // @include vr(
+    //   $offset-top: 1px
+    // );
   }
   &.blue {
     background: lighten($blue, 0);
