--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -1,6 +1,7 @@
 .window {
   box-shadow: 5px 5px 10px 0px rgba(#000, 0.05);
   img {
+    width: 100%;
     display: block;
     border-radius: 1px;
   }
