:art: Adjust resume margins on print display

--- a/src/app.scss
+++ b/src/app.scss
@@ -228,6 +228,8 @@ h1, h2, h3, h4, h5 {
     padding-right: 0 !important;
   }
   .resume__document {
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
     border-top: none !important;
     box-shadow: none !important;
   }
