:lipstick: Improve font display when printing

--- a/src/app.scss
+++ b/src/app.scss
@@ -223,6 +223,11 @@ h1, h2, h3, h4, h5 {
     font-size: 17px !important;
   }
 
+  strong {
+    font-weight: normal;
+    color: #000;
+  }
+
   .grid-wrapper {
     padding-left: 0 !important;
     padding-right: 0 !important;
