--- a/src/app.scss
+++ b/src/app.scss
@@ -202,7 +202,7 @@ h1, h2, h3, h4, h5 {
 
 }
 
-@media print {
+// @media print {
   header, footer {
     display: none !important;
   }
@@ -214,10 +214,14 @@ h1, h2, h3, h4, h5 {
     display: none !important;
   }
   .resume {
+    margin: 0 !important;
     padding: 0 !important;
     background: #fff !important;
   }
 
+  .resume h3 {
+    font-size: 24px;
+  }
   .resume h4 {
     font-size: 17px;
   }
@@ -251,4 +255,4 @@ h1, h2, h3, h4, h5 {
     box-shadow: none !important;
   }
 
-}
+// }
