--- a/src/app.scss
+++ b/src/app.scss
@@ -202,7 +202,7 @@ h1, h2, h3, h4, h5 {
 
 }
 
-// @media print {
+@media print {
   header, footer {
     display: none !important;
   }
@@ -251,8 +251,8 @@ h1, h2, h3, h4, h5 {
   .resume__document {
     padding-left: 1.5rem !important;
     padding-right: 1.5rem !important;
-    // border-top: none !important;
+    border-top: 8px solid $orange;
     box-shadow: none !important;
   }
 
-// }
+}
