--- a/src/app.scss
+++ b/src/app.scss
@@ -111,7 +111,7 @@ a {
 }
 
 .grid-wrapper {
-  max-width: 57rem;
+  max-width: 58rem;
   margin: 0 auto;
   @include vr(
     $padding-left: 1,
@@ -131,6 +131,7 @@ h1, h2, h3, h4, h5 {
 @import "./styles/window.scss";
 @import "./styles/about.scss";
 @import "./styles/skills.scss";
+@import "./styles/case_study.scss";
 
 // extenders
 .animateButton {
