--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,7 +3,7 @@
 
   figure {
     display: block;
-    flex: 0 0 33.333333333%;
+    flex: 0 0 37%;
     margin: 0;
     padding: 0;
     @include vr(
@@ -19,7 +19,7 @@
   }
 
   aside {
-    flex: 0 0 66.6666666666%;
+    flex: 0 0 63%;
     @include vr(
       $padding-left: 0.5
     );
