--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -12,6 +12,11 @@ header {
       $padding-right: 0
     );
   }
+
+  a.active {
+    color: $orange;
+    cursor: default;
+  }
   h1 {
     margin: 0;
     font-weight: 400;
@@ -75,7 +80,6 @@ header {
         color: $orange;
       }
       &.active {
-        color: $orange;
         span {
           border-color: $orange;
         }
